--- a/broadway_portfolio/style.css
+++ b/broadway_portfolio/style.css
@@ -3,6 +3,7 @@ body{
    padding: 0px;
 }
 header{
+   margin-top: 0px;
    background-color: rgb(49, 45, 45);
    position: fixed;
    width: 100%;
@@ -10,7 +11,6 @@ header{
 }
 nav{
    margin: 0px;
-   padding: 20px 0px;
 }
 nav li{
    color: white;
@@ -27,6 +27,17 @@ main{
    text-align: center;
    position: relative;
    top: 100px;
-   background-image: url(https://www.mmarchitecturalphotography.com/chicago-architectural-photographer/uploads/2018/06/300-north-lasalle-chicago.jpg);
    
+}
+.main_container{
+   background-image: url(https://www.mmarchitecturalphotography.com/chicago-architectural-photographer/uploads/2018/06/300-north-lasalle-chicago.jpg);
+   /* background-size: cover; */
+   min-height: 800px;
+}
+.main_container h1, a{
+   color: white;
+   text-decoration: none;
+}
+h1{
+   font-size: 2.4em;
 }
